add css and preparations

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -5,3 +5,4 @@
 @import "../../bower_components/font-awesome/scss/font-awesome.scss";
 // endbower
 @import "common/global";
+@import "_cssfields.scss";
