--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -1,34 +1,12 @@
-// Glyphicons font path
-$icon-font-path:        "../fonts/";
+//fields
 
-// Grid settings
-$main-sm-columns:       12;
-$sidebar-sm-columns:    4;
-$special-column-cols:   ($main-sm-columns / 5);
-$special-column-width:  percentage($special-column-cols/$main-sm-columns);
+// normalize
+$field-width:       300px !default;
+$field-padding:     15px !default;
+$field-margin:      10px !default;
 
-// Colors
-$brand-primary:         #00af50;
-
-/* border-radius */
-$border-radius-base:    20px;
-$border-radius-large:   30px;
-$border-radius-xlarge:  40px;
-$border-radius-small:   10px;
-
-/* fontsize */
-$font-size-base:        16px;
-
-// transition
-$transition:            cubic-bezier(0.885, 0.000, 0.105, 1.190);
-$transition-blop:       cubic-bezier(0.590, -0.535, 0.245, 1.000);
-$transition-speed:      400ms;
-$animation-normal:      $transition-speed $transition;
-$animation-fast:        ($transition-speed / 2) $transition;
-$animation-slow:        ($transition-speed * 2) $transition;
-
-$animation-blop-normal: $transition-speed $transition-blop;
-$animation-blop-fast:   ($transition-speed / 2) $transition-blop;
-
-$carousel-speed:        2s;
-$carousel-animation:    $carousel-speed cubic-bezier(0.675, 0.010, 0.480, 0.995);
+// animation
+$field-animation-dur:   400ms;
+$field-animation-base:  all $field-animation-dur ease-in-out;
+$field-animation-fast:  all ($field-animation-dur / 2) ease-in-out;
+$field-animation-slow:  all ($field-animation-dur * 2) ease-in-out;
